tests/neg/i25347b/_2.scala
object P extends T {
  def bar = O.foo(new i.C) // error
}
